[UPDATE] Add model diagram vizualization in notebook

--- a/src/OvR_SVM_RBF_CV.ipynb
+++ b/src/OvR_SVM_RBF_CV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "hundred-subscriber",
    "metadata": {},
    "outputs": [],
@@ -15,6 +15,9 @@
     "from MicroBiome import MicroBiomeDataSet, Trainer, TrainTester, MultiTrainTester\n",
     "from sklearn import linear_model as LM\n",
     "from sklearn.svm import SVC\n",
+    "# Show pipeline as plot\n",
+    "from sklearn import set_config\n",
+    "set_config(display='diagram')\n",
     "import seaborn as sns\n",
     "\n",
     "# Ignore warning messages\n",
