--- a/src/multiclass_age_group_RF-LOGITGridSearchCV.ipynb
+++ b/src/multiclass_age_group_RF-LOGITGridSearchCV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "becoming-newton",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,9 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.feature_selection import SelectFromModel\n",
     "from sklearn.pipeline import Pipeline\n",
+    "# Show pipeline as plot\n",
+    "from sklearn import set_config\n",
+    "set_config(display='diagram')\n",
     "import seaborn as sns\n",
     "\n",
     "# Ignore warning messages\n",
@@ -532,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "numerical-score",
+   "id": "elder-literacy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dominican-accused",
+   "id": "thirty-reception",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "amended-agenda",
+   "id": "gentle-darkness",
    "metadata": {},
    "outputs": [
     {
@@ -763,8 +766,10 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "incorporate-niagara",
-   "metadata": {},
+   "id": "imperial-supplier",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -826,12 +831,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "id": "horizontal-purple",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>div.sk-top-container {color: black;background-color: white;}div.sk-toggleable {background-color: white;}label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.2em 0.3em;box-sizing: border-box;text-align: center;}div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}div.sk-estimator {font-family: monospace;background-color: #f0f8ff;margin: 0.25em 0.25em;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;}div.sk-estimator:hover {background-color: #d4ebff;}div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 2em;bottom: 0;left: 50%;}div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;}div.sk-item {z-index: 1;}div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;}div.sk-parallel-item {display: flex;flex-direction: column;position: relative;background-color: white;}div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}div.sk-parallel-item:only-child::after {width: 0;}div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0.2em;box-sizing: border-box;padding-bottom: 0.1em;background-color: white;position: relative;}div.sk-label label {font-family: monospace;font-weight: bold;background-color: white;display: inline-block;line-height: 1.2em;}div.sk-label-container {position: relative;z-index: 2;text-align: center;}div.sk-container {display: inline-block;position: relative;}</style><div class=\"sk-top-container\"><div class=\"sk-container\"><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"5e0b07e8-764c-485b-b8cd-7b73d8d86dde\" type=\"checkbox\" ><label class=\"sk-toggleable__label\" for=\"5e0b07e8-764c-485b-b8cd-7b73d8d86dde\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[('rfc',\n",
+       "                 SelectFromModel(estimator=RandomForestClassifier(max_depth=50,\n",
+       "                                                                  n_estimators=50,\n",
+       "                                                                  oob_score=True))),\n",
+       "                ('logistic',\n",
+       "                 LogisticRegression(C=100, l1_ratio=1, penalty='elasticnet',\n",
+       "                                    solver='saga'))])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"605dc180-73a3-49ab-b437-ac384a1bb659\" type=\"checkbox\" ><label class=\"sk-toggleable__label\" for=\"605dc180-73a3-49ab-b437-ac384a1bb659\">rfc: SelectFromModel</label><div class=\"sk-toggleable__content\"><pre>SelectFromModel(estimator=RandomForestClassifier(max_depth=50, n_estimators=50,\n",
+       "                                                 oob_score=True))</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"4bcc830b-9255-40d4-998c-8308ec0d55ba\" type=\"checkbox\" ><label class=\"sk-toggleable__label\" for=\"4bcc830b-9255-40d4-998c-8308ec0d55ba\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(max_depth=50, n_estimators=50, oob_score=True)</pre></div></div></div></div></div></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"476f005b-a308-44ce-afcd-8b03a64a1938\" type=\"checkbox\" ><label class=\"sk-toggleable__label\" for=\"476f005b-a308-44ce-afcd-8b03a64a1938\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(C=100, l1_ratio=1, penalty='elasticnet', solver='saga')</pre></div></div></div></div></div></div></div>"
+      ],
       "text/plain": [
        "Pipeline(steps=[('rfc',\n",
        "                 SelectFromModel(estimator=RandomForestClassifier(max_depth=50,\n",
@@ -842,7 +857,7 @@
        "                                    solver='saga'))])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharp-nerve",
+   "id": "infinite-journey",
    "metadata": {},
    "source": [
     "# Distribution of RF Feature Importances"
@@ -937,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "familiar-engagement",
+   "id": "judicial-submission",
    "metadata": {},
    "source": [
     "# Features Selected for Logistic Regression\n",
@@ -948,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "accomplished-stereo",
+   "id": "accepted-bangkok",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "waiting-israel",
+   "id": "final-kenya",
    "metadata": {},
    "outputs": [
     {
