--- a/src/multiclass_age_category_RF-LOGITGridSearchCV.ipynb
+++ b/src/multiclass_age_category_RF-LOGITGridSearchCV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "becoming-newton",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,9 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.feature_selection import SelectFromModel\n",
     "from sklearn.pipeline import Pipeline\n",
+    "# Show pipeline as plot\n",
+    "from sklearn import set_config\n",
+    "set_config(display='diagram')\n",
     "import seaborn as sns\n",
     "\n",
     "# Ignore warning messages\n",
@@ -794,12 +797,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "horizontal-purple",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>div.sk-top-container {color: black;background-color: white;}div.sk-toggleable {background-color: white;}label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.2em 0.3em;box-sizing: border-box;text-align: center;}div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}div.sk-estimator {font-family: monospace;background-color: #f0f8ff;margin: 0.25em 0.25em;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;}div.sk-estimator:hover {background-color: #d4ebff;}div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 2em;bottom: 0;left: 50%;}div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;}div.sk-item {z-index: 1;}div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;}div.sk-parallel-item {display: flex;flex-direction: column;position: relative;background-color: white;}div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}div.sk-parallel-item:only-child::after {width: 0;}div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0.2em;box-sizing: border-box;padding-bottom: 0.1em;background-color: white;position: relative;}div.sk-label label {font-family: monospace;font-weight: bold;background-color: white;display: inline-block;line-height: 1.2em;}div.sk-label-container {position: relative;z-index: 2;text-align: center;}div.sk-container {display: inline-block;position: relative;}</style><div class=\"sk-top-container\"><div class=\"sk-container\"><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"e3855507-6af8-4c7d-80ca-4fe00ae48c89\" type=\"checkbox\" ><label class=\"sk-toggleable__label\" for=\"e3855507-6af8-4c7d-80ca-4fe00ae48c89\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[('rfc',\n",
+       "                 SelectFromModel(estimator=RandomForestClassifier(max_depth=100,\n",
+       "                                                                  oob_score=True))),\n",
+       "                ('logistic', LogisticRegression(solver='saga'))])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"2e3ce3f8-b12f-4d97-bc40-e55d510e5597\" type=\"checkbox\" ><label class=\"sk-toggleable__label\" for=\"2e3ce3f8-b12f-4d97-bc40-e55d510e5597\">rfc: SelectFromModel</label><div class=\"sk-toggleable__content\"><pre>SelectFromModel(estimator=RandomForestClassifier(max_depth=100, oob_score=True))</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"1fc5f260-c4bf-4e9e-ad04-a82a29782d54\" type=\"checkbox\" ><label class=\"sk-toggleable__label\" for=\"1fc5f260-c4bf-4e9e-ad04-a82a29782d54\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(max_depth=100, oob_score=True)</pre></div></div></div></div></div></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"4f98eec6-a61d-4e31-92c3-cb24521280a9\" type=\"checkbox\" ><label class=\"sk-toggleable__label\" for=\"4f98eec6-a61d-4e31-92c3-cb24521280a9\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(solver='saga')</pre></div></div></div></div></div></div></div>"
+      ],
       "text/plain": [
        "Pipeline(steps=[('rfc',\n",
        "                 SelectFromModel(estimator=RandomForestClassifier(max_depth=100,\n",
@@ -807,7 +816,7 @@
        "                ('logistic', LogisticRegression(solver='saga'))])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "artificial-florida",
+   "id": "valid-candidate",
    "metadata": {},
    "outputs": [
     {
