--- a/src/OvR_LogisticRegressionCV.ipynb
+++ b/src/OvR_LogisticRegressionCV.ipynb
@@ -92,8 +92,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Unnamed: 0.1</th>\n",
        "      <th>6</th>\n",
        "      <th>study</th>\n",
        "      <th>Study No. (From VG sheet (V-*) from SB sheet (S-*))</th>\n",
@@ -102,7 +100,11 @@
        "      <th>Journal</th>\n",
        "      <th>Study Accession</th>\n",
        "      <th>Sample Accession or Sample ID</th>\n",
+       "      <th>Sample title (ENA/SRA)</th>\n",
+       "      <th>Sample title (Paper)</th>\n",
        "      <th>...</th>\n",
+       "      <th>Use of milk or milk products (Yes/No/Sometimes)</th>\n",
+       "      <th>Use of Animal Product- Meat (Yes/No/Vegetarian/Vegan)</th>\n",
        "      <th>Alcohol Consumption (Yes/No)</th>\n",
        "      <th>Diet1</th>\n",
        "      <th>Intervention for study (Diet)</th>\n",
@@ -111,15 +113,11 @@
        "      <th>Library layout (SINGLE/PAIRED)</th>\n",
        "      <th>Read count after Quality control</th>\n",
        "      <th>Healthy</th>\n",
-       "      <th>age_group</th>\n",
-       "      <th>age_category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>SAMEA104142287</td>\n",
        "      <td>V-2_ACVD</td>\n",
        "      <td>V-2</td>\n",
@@ -128,7 +126,11 @@
        "      <td>Nature communications</td>\n",
        "      <td>PRJEB21528</td>\n",
        "      <td>SAMEA104142287</td>\n",
+       "      <td>ZSL-004</td>\n",
+       "      <td>ZSL-004</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -137,13 +139,9 @@
        "      <td>PAIRED</td>\n",
        "      <td>43356775.0</td>\n",
        "      <td>Unhealthy</td>\n",
-       "      <td>40-50</td>\n",
-       "      <td>adult</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>SAMEA104142288</td>\n",
        "      <td>V-2_ACVD</td>\n",
        "      <td>V-2</td>\n",
@@ -152,7 +150,11 @@
        "      <td>Nature communications</td>\n",
        "      <td>PRJEB21528</td>\n",
        "      <td>SAMEA104142288</td>\n",
+       "      <td>ZSL-007</td>\n",
+       "      <td>ZSL-007</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -161,13 +163,9 @@
        "      <td>PAIRED</td>\n",
        "      <td>41073871.0</td>\n",
        "      <td>Unhealthy</td>\n",
-       "      <td>70-80</td>\n",
-       "      <td>senior</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>SAMEA104142293</td>\n",
        "      <td>V-2_ACVD</td>\n",
        "      <td>V-2</td>\n",
@@ -176,7 +174,11 @@
        "      <td>Nature communications</td>\n",
        "      <td>PRJEB21528</td>\n",
        "      <td>SAMEA104142293</td>\n",
+       "      <td>ZSL-010</td>\n",
+       "      <td>ZSL-010</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -185,13 +187,9 @@
        "      <td>PAIRED</td>\n",
        "      <td>40199673.0</td>\n",
        "      <td>Unhealthy</td>\n",
-       "      <td>70-80</td>\n",
-       "      <td>senior</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "      <td>SAMEA104142291</td>\n",
        "      <td>V-2_ACVD</td>\n",
        "      <td>V-2</td>\n",
@@ -200,7 +198,11 @@
        "      <td>Nature communications</td>\n",
        "      <td>PRJEB21528</td>\n",
        "      <td>SAMEA104142291</td>\n",
+       "      <td>ZSL-011</td>\n",
+       "      <td>ZSL-011</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -209,13 +211,9 @@
        "      <td>PAIRED</td>\n",
        "      <td>31054158.0</td>\n",
        "      <td>Unhealthy</td>\n",
-       "      <td>40-50</td>\n",
-       "      <td>adult</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
        "      <td>SAMEA104142284</td>\n",
        "      <td>V-2_ACVD</td>\n",
        "      <td>V-2</td>\n",
@@ -224,7 +222,11 @@
        "      <td>Nature communications</td>\n",
        "      <td>PRJEB21528</td>\n",
        "      <td>SAMEA104142284</td>\n",
+       "      <td>ZSL-019</td>\n",
+       "      <td>ZSL-019</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -233,21 +235,19 @@
        "      <td>PAIRED</td>\n",
        "      <td>36081150.0</td>\n",
        "      <td>Unhealthy</td>\n",
-       "      <td>60-70</td>\n",
-       "      <td>senior</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 38 columns</p>\n",
+       "<p>5 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  Unnamed: 0.1               6     study  \\\n",
-       "0           0             0  SAMEA104142287  V-2_ACVD   \n",
-       "1           1             1  SAMEA104142288  V-2_ACVD   \n",
-       "2           2             2  SAMEA104142293  V-2_ACVD   \n",
-       "3           3             3  SAMEA104142291  V-2_ACVD   \n",
-       "4           4             4  SAMEA104142284  V-2_ACVD   \n",
+       "                6     study  \\\n",
+       "0  SAMEA104142287  V-2_ACVD   \n",
+       "1  SAMEA104142288  V-2_ACVD   \n",
+       "2  SAMEA104142293  V-2_ACVD   \n",
+       "3  SAMEA104142291  V-2_ACVD   \n",
+       "4  SAMEA104142284  V-2_ACVD   \n",
        "\n",
        "  Study No. (From VG sheet (V-*) from SB sheet (S-*))  \\\n",
        "0                                                V-2    \n",
@@ -263,12 +263,33 @@
        "3  The gut microbiome in atherosclerotic cardiova...    Jie (2017)   \n",
        "4  The gut microbiome in atherosclerotic cardiova...    Jie (2017)   \n",
        "\n",
-       "                 Journal Study Accession Sample Accession or Sample ID  ...  \\\n",
-       "0  Nature communications      PRJEB21528                SAMEA104142287  ...   \n",
-       "1  Nature communications      PRJEB21528                SAMEA104142288  ...   \n",
-       "2  Nature communications      PRJEB21528                SAMEA104142293  ...   \n",
-       "3  Nature communications      PRJEB21528                SAMEA104142291  ...   \n",
-       "4  Nature communications      PRJEB21528                SAMEA104142284  ...   \n",
+       "                 Journal Study Accession Sample Accession or Sample ID  \\\n",
+       "0  Nature communications      PRJEB21528                SAMEA104142287   \n",
+       "1  Nature communications      PRJEB21528                SAMEA104142288   \n",
+       "2  Nature communications      PRJEB21528                SAMEA104142293   \n",
+       "3  Nature communications      PRJEB21528                SAMEA104142291   \n",
+       "4  Nature communications      PRJEB21528                SAMEA104142284   \n",
+       "\n",
+       "  Sample title (ENA/SRA) Sample title (Paper)  ...  \\\n",
+       "0                ZSL-004              ZSL-004  ...   \n",
+       "1                ZSL-007              ZSL-007  ...   \n",
+       "2                ZSL-010              ZSL-010  ...   \n",
+       "3                ZSL-011              ZSL-011  ...   \n",
+       "4                ZSL-019              ZSL-019  ...   \n",
+       "\n",
+       "  Use of milk or milk products (Yes/No/Sometimes)  \\\n",
+       "0                                             NaN   \n",
+       "1                                             NaN   \n",
+       "2                                             NaN   \n",
+       "3                                             NaN   \n",
+       "4                                             NaN   \n",
+       "\n",
+       "  Use of Animal Product- Meat (Yes/No/Vegetarian/Vegan)  \\\n",
+       "0                                                NaN      \n",
+       "1                                                NaN      \n",
+       "2                                                NaN      \n",
+       "3                                                NaN      \n",
+       "4                                                NaN      \n",
        "\n",
        "  Alcohol Consumption (Yes/No) Diet1 Intervention for study (Diet)  \\\n",
        "0                          NaN   NaN                           NaN   \n",
@@ -284,21 +305,14 @@
        "3                                 NaN  Illumina HiSeq 2000   \n",
        "4                                 NaN  Illumina HiSeq 2000   \n",
        "\n",
-       "  Library layout (SINGLE/PAIRED) Read count after Quality control    Healthy  \\\n",
-       "0                         PAIRED                       43356775.0  Unhealthy   \n",
-       "1                         PAIRED                       41073871.0  Unhealthy   \n",
-       "2                         PAIRED                       40199673.0  Unhealthy   \n",
-       "3                         PAIRED                       31054158.0  Unhealthy   \n",
-       "4                         PAIRED                       36081150.0  Unhealthy   \n",
+       "  Library layout (SINGLE/PAIRED) Read count after Quality control    Healthy  \n",
+       "0                         PAIRED                       43356775.0  Unhealthy  \n",
+       "1                         PAIRED                       41073871.0  Unhealthy  \n",
+       "2                         PAIRED                       40199673.0  Unhealthy  \n",
+       "3                         PAIRED                       31054158.0  Unhealthy  \n",
+       "4                         PAIRED                       36081150.0  Unhealthy  \n",
        "\n",
-       "  age_group age_category  \n",
-       "0     40-50        adult  \n",
-       "1     70-80       senior  \n",
-       "2     70-80       senior  \n",
-       "3     40-50        adult  \n",
-       "4     60-70       senior  \n",
-       "\n",
-       "[5 rows x 38 columns]"
+       "[5 rows x 34 columns]"
       ]
      },
      "execution_count": 4,
@@ -320,7 +334,7 @@
     {
      "data": {
       "text/plain": [
-       "(3153, 38)"
+       "(3153, 34)"
       ]
      },
      "execution_count": 5,
