[ADD] Added document with ASCVD diagnostics screens and costs

--- a/src/XGBoostGridSearchCV.ipynb
+++ b/src/XGBoostGridSearchCV.ipynb
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "blocked-health",
+   "id": "clinical-afghanistan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "progressive-chick",
+   "id": "vital-vertex",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "embedded-inspiration",
+   "id": "saved-winner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "funny-optimization",
+   "id": "particular-income",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "mechanical-device",
+   "id": "solid-column",
    "metadata": {},
    "outputs": [
     {
@@ -1040,8 +1040,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "id": "fleet-violin",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Gender': 2,\n",
+       " 'GRoP': 16,\n",
+       " 'Phys_Ex': 4,\n",
+       " 'Smoking': 3,\n",
+       " 'Residence': 2,\n",
+       " 'milk': 2,\n",
+       " 'meat': 3,\n",
+       " 'alcohol': 4,\n",
+       " 'Diet1': 4,\n",
+       " 'Diet2': 2,\n",
+       " 'medication': 2,\n",
+       " 'age_category': 3}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_embsizes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
-   "id": "aging-version",
+   "id": "compound-princeton",
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "continent-athens",
+   "id": "acknowledged-beaver",
    "metadata": {},
    "outputs": [
     {
