--- a/src/keras_NN.ipynb
+++ b/src/keras_NN.ipynb
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "consistent-bearing",
+   "id": "military-lawrence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,8 +413,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "second-foundation",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ClinicalNumeric_vars' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-e6d8a320abf6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mClinicalNumeric_vars\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'ClinicalNumeric_vars' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ClinicalNumeric_vars"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
-   "id": "toxic-butterfly",
+   "id": "structured-afghanistan",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "hispanic-generic",
+   "id": "affiliated-webmaster",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "egyptian-indie",
+   "id": "fitted-norwegian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "liberal-crawford",
+   "id": "little-audit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "accredited-schema",
+   "id": "domestic-coupon",
    "metadata": {
     "scrolled": false
    },
@@ -919,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "addressed-philippines",
+   "id": "occupational-surge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +990,7 @@
    "execution_count": 51,
    "id": "direct-center",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1700,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "latin-formula",
+   "id": "typical-wholesale",
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1789,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "rural-level",
+   "id": "regulated-croatia",
    "metadata": {},
    "outputs": [
     {
@@ -1824,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "prepared-proceeding",
+   "id": "stopped-wholesale",
    "metadata": {},
    "outputs": [
     {
