update logistic ACVD vs rest

--- a/src/LogisticRegressionCV_w_clinical_ACVD_v_Rest_Jie_only.ipynb
+++ b/src/LogisticRegressionCV_w_clinical_ACVD_v_Rest_Jie_only.ipynb
@@ -284,6 +284,74 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "contrary-specification",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-99    274\n",
+       "Name: Diet1, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SampleMeta['Diet1'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "constant-bottle",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-99    274\n",
+       "Name: Diet2, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SampleMeta['Diet2'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "statistical-rebecca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-99        242\n",
+       "no          21\n",
+       "smoking     11\n",
+       "Name: Smoking, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SampleMeta['Smoking'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "severe-aspect",
    "metadata": {},
    "outputs": [
@@ -298,7 +366,7 @@
        "Name: Phenotype, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "valued-commissioner",
    "metadata": {},
    "outputs": [
@@ -319,7 +387,7 @@
        "(274, 903)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,159 +399,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "elect-february",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>feature</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>s__Abiotrophia_defectiva</td>\n",
-       "      <td>s__Abiotrophia_defectiva</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>s__Acetobacter_unclassified</td>\n",
-       "      <td>s__Acetobacter_unclassified</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>s__Achromobacter_piechaudii</td>\n",
-       "      <td>s__Achromobacter_piechaudii</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>s__Achromobacter_unclassified</td>\n",
-       "      <td>s__Achromobacter_unclassified</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>s__Achromobacter_xylosoxidans</td>\n",
-       "      <td>s__Achromobacter_xylosoxidans</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>898</th>\n",
-       "      <td>s__Weissella_koreensis</td>\n",
-       "      <td>s__Weissella_koreensis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>899</th>\n",
-       "      <td>s__Weissella_paramesenteroides</td>\n",
-       "      <td>s__Weissella_paramesenteroides</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>900</th>\n",
-       "      <td>s__Weissella_unclassified</td>\n",
-       "      <td>s__Weissella_unclassified</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>901</th>\n",
-       "      <td>s__Wohlfahrtiimonas_chitiniclastica</td>\n",
-       "      <td>s__Wohlfahrtiimonas_chitiniclastica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>902</th>\n",
-       "      <td>s__Yersinia_enterocolitica</td>\n",
-       "      <td>s__Yersinia_enterocolitica</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>903 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              Unnamed: 0                              feature\n",
-       "0               s__Abiotrophia_defectiva             s__Abiotrophia_defectiva\n",
-       "1            s__Acetobacter_unclassified          s__Acetobacter_unclassified\n",
-       "2            s__Achromobacter_piechaudii          s__Achromobacter_piechaudii\n",
-       "3          s__Achromobacter_unclassified        s__Achromobacter_unclassified\n",
-       "4          s__Achromobacter_xylosoxidans        s__Achromobacter_xylosoxidans\n",
-       "..                                   ...                                  ...\n",
-       "898               s__Weissella_koreensis               s__Weissella_koreensis\n",
-       "899       s__Weissella_paramesenteroides       s__Weissella_paramesenteroides\n",
-       "900            s__Weissella_unclassified            s__Weissella_unclassified\n",
-       "901  s__Wohlfahrtiimonas_chitiniclastica  s__Wohlfahrtiimonas_chitiniclastica\n",
-       "902           s__Yersinia_enterocolitica           s__Yersinia_enterocolitica\n",
-       "\n",
-       "[903 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "FeatMeta = pd.read_csv(os.path.join(inp_dir, 'FeatMetaDataClean.csv'))\n",
-    "FeatMeta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "specific-conditions",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ClinicalContinuousMat = SampleMeta.loc[:, ['Age (Years)', 'BMI']].to_numpy().astype('float64')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "medium-proxy",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(274, 1)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ClinicalBinaryMat = (SampleMeta.loc[:, ['Gender']].to_numpy() == 'M').astype('float64')\n",
-    "ClinicalBinaryMat.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
-   "id": "acute-moscow",
+   "id": "elect-february",
    "metadata": {},
    "outputs": [
     {
@@ -595,12 +512,163 @@
     }
    ],
    "source": [
+    "FeatMeta = pd.read_csv(os.path.join(inp_dir, 'FeatMetaDataClean.csv'))\n",
     "FeatMeta"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "specific-conditions",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ClinicalContinuousMat = SampleMeta.loc[:, ['Age (Years)', 'BMI']].to_numpy().astype('float64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "medium-proxy",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(274, 1)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ClinicalBinaryMat = (SampleMeta.loc[:, ['Gender']].to_numpy() == 'M').astype('float64')\n",
+    "ClinicalBinaryMat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "acute-moscow",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>feature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>s__Abiotrophia_defectiva</td>\n",
+       "      <td>s__Abiotrophia_defectiva</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>s__Acetobacter_unclassified</td>\n",
+       "      <td>s__Acetobacter_unclassified</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>s__Achromobacter_piechaudii</td>\n",
+       "      <td>s__Achromobacter_piechaudii</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>s__Achromobacter_unclassified</td>\n",
+       "      <td>s__Achromobacter_unclassified</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>s__Achromobacter_xylosoxidans</td>\n",
+       "      <td>s__Achromobacter_xylosoxidans</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>898</th>\n",
+       "      <td>s__Weissella_koreensis</td>\n",
+       "      <td>s__Weissella_koreensis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>899</th>\n",
+       "      <td>s__Weissella_paramesenteroides</td>\n",
+       "      <td>s__Weissella_paramesenteroides</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>900</th>\n",
+       "      <td>s__Weissella_unclassified</td>\n",
+       "      <td>s__Weissella_unclassified</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>901</th>\n",
+       "      <td>s__Wohlfahrtiimonas_chitiniclastica</td>\n",
+       "      <td>s__Wohlfahrtiimonas_chitiniclastica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>902</th>\n",
+       "      <td>s__Yersinia_enterocolitica</td>\n",
+       "      <td>s__Yersinia_enterocolitica</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>903 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              Unnamed: 0                              feature\n",
+       "0               s__Abiotrophia_defectiva             s__Abiotrophia_defectiva\n",
+       "1            s__Acetobacter_unclassified          s__Acetobacter_unclassified\n",
+       "2            s__Achromobacter_piechaudii          s__Achromobacter_piechaudii\n",
+       "3          s__Achromobacter_unclassified        s__Achromobacter_unclassified\n",
+       "4          s__Achromobacter_xylosoxidans        s__Achromobacter_xylosoxidans\n",
+       "..                                   ...                                  ...\n",
+       "898               s__Weissella_koreensis               s__Weissella_koreensis\n",
+       "899       s__Weissella_paramesenteroides       s__Weissella_paramesenteroides\n",
+       "900            s__Weissella_unclassified            s__Weissella_unclassified\n",
+       "901  s__Wohlfahrtiimonas_chitiniclastica  s__Wohlfahrtiimonas_chitiniclastica\n",
+       "902           s__Yersinia_enterocolitica           s__Yersinia_enterocolitica\n",
+       "\n",
+       "[903 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FeatMeta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "chicken-truck",
    "metadata": {},
    "outputs": [],
@@ -610,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "driving-tribune",
    "metadata": {},
    "outputs": [],
@@ -621,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "confused-recipient",
    "metadata": {},
    "outputs": [
@@ -636,7 +704,7 @@
        "Name: Phenotype, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "regional-logistics",
    "metadata": {},
    "outputs": [
@@ -743,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "variable-niger",
    "metadata": {},
    "outputs": [
@@ -901,7 +969,7 @@
        "9  0.745370   test"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "characteristic-humanitarian",
    "metadata": {},
    "outputs": [
@@ -924,7 +992,7 @@
        "<AxesSubplot:xlabel='stage', ylabel='score'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -947,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "underlying-transformation",
    "metadata": {},
    "outputs": [
@@ -961,7 +1029,7 @@
        "       2.47875218e-03, 9.11881966e-04, 3.35462628e-04, 1.23409804e-04])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "figured-mainland",
    "metadata": {},
    "outputs": [],
@@ -985,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "educated-canyon",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1151,7 @@
        "9                 [0.9]  [0.049787068367863944]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "increasing-photographer",
    "metadata": {},
    "outputs": [],
@@ -1126,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "directed-focus",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1204,7 @@
        "<AxesSubplot:xlabel='score_type', ylabel='value'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1159,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "nonprofit-fiber",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1237,7 @@
        "0.699666295884316"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "computational-understanding",
    "metadata": {},
    "outputs": [
@@ -1190,7 +1258,7 @@
        "0.8166666666666667"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "likely-spring",
    "metadata": {},
    "outputs": [],
@@ -1211,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "arabic-settle",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "local-thread",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "earlier-efficiency",
    "metadata": {},
    "outputs": [
@@ -1280,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "hollow-increase",
    "metadata": {},
    "outputs": [
@@ -1303,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "union-genius",
    "metadata": {},
    "outputs": [
