[ADD] XGBoost + LR analyses, w/ and w/o clinical data, fix list_transform class

--- a/src/XGB_Classifier_generic.ipynb
+++ b/src/XGB_Classifier_generic.ipynb
@@ -78,7 +78,7 @@
     "inp_mat_file = '/project/data/raw/justin_paired_end_run_jul_6_2021/PE_50K_freq_mat.csv'\n",
     "metadata_file = '/project/data/raw/Jie_2017_supp_table_1.xlsx'\n",
     "identifiers_file = '/project/data/raw/SRA/all_runs.csv'\n",
-    "output_dir = '/project/results/LR_Classifier_generic'\n",
+    "output_dir = '/project/results/XGB_Classifier_generic'\n",
     "retrain = True"
    ]
   },
@@ -1219,7 +1219,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f165340ff50>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f76d88c5bd0>"
       ]
      },
      "execution_count": 14,
@@ -1255,7 +1255,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f164f540dd0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f76d88c5fd0>"
       ]
      },
      "execution_count": 15,
@@ -1467,7 +1467,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f164f44e090>]"
+       "[<matplotlib.lines.Line2D at 0x7f76d8539ed0>]"
       ]
      },
      "execution_count": 26,
