[ADD] Clinical_correlates_generic.ipynb. added more statistics functionality to Microbiome.py

--- a/src/LR_Classifier_DE_w_clinical_generic.ipynb
+++ b/src/LR_Classifier_DE_w_clinical_generic.ipynb
@@ -1220,7 +1220,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7ff3bed3ad10>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f9a47d04b10>"
       ]
      },
      "execution_count": 14,
@@ -1256,7 +1256,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7ff3bafec110>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f9a47b137d0>"
       ]
      },
      "execution_count": 15,
@@ -1838,7 +1838,7 @@
     {
      "data": {
       "text/plain": [
-       "<MicroBiome.DiffExpTransform at 0x7ff3bb272110>"
+       "<MicroBiome.DiffExpTransform at 0x7f9a47d96a10>"
       ]
      },
      "execution_count": 39,
@@ -2723,7 +2723,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7ff3bb184550>]"
+       "[<matplotlib.lines.Line2D at 0x7f9a47db5c10>]"
       ]
      },
      "execution_count": 45,
