correct score comment in modified notebooks

--- a/src/LR_Classifier_DE_w_clinical_complete_generic.ipynb
+++ b/src/LR_Classifier_DE_w_clinical_complete_generic.ipynb
@@ -3347,7 +3347,7 @@
     }
    ],
    "source": [
-    "# median AUROC (positive class)\n",
+    "# median AUROC (negative class)\n",
     "np.median(other_metrics_df['value'][other_metrics_df['score_type'] == 'AUROC_NEG'])"
    ]
   },
