--- a/src/LR_Classifier_clinical_only_systolic_complete_generic.ipynb
+++ b/src/LR_Classifier_clinical_only_systolic_complete_generic.ipynb
@@ -1221,7 +1221,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fb29a4dabd0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7efcec7256d0>"
       ]
      },
      "execution_count": 14,
@@ -1257,7 +1257,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fb29a2d3250>"
+       "<seaborn.axisgrid.FacetGrid at 0x7efce40d60d0>"
       ]
      },
      "execution_count": 15,
@@ -2274,7 +2274,7 @@
     }
    ],
    "source": [
-    "# median AUROC (positive class)\n",
+    "# median AUROC (negative class)\n",
     "np.median(other_metrics_df['value'][other_metrics_df['score_type'] == 'AUROC_NEG'])"
    ]
   },
