ipynb notebooks: save metadata used.

--- a/src/LR_Classifier_DE_generic.ipynb
+++ b/src/LR_Classifier_DE_generic.ipynb
@@ -1221,7 +1221,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f0db483b850>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f4583e2aa90>"
       ]
      },
      "execution_count": 14,
@@ -1257,7 +1257,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f0db08d6fd0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f4583c6eb50>"
       ]
      },
      "execution_count": 15,
@@ -1382,10 +1382,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if any_zero_samples:\n",
-    "    samples_keep = np.logical_not(zero_samples)\n",
-    "    X = X[samples_keep, :]\n",
-    "    meta_data_full = meta_data_full.iloc[samples_keep, :]"
+    "# if any_zero_samples:\n",
+    "#     samples_keep = np.logical_not(zero_samples)\n",
+    "#     X = X[samples_keep, :]\n",
+    "#     meta_data_full = meta_data_full.iloc[samples_keep, :]"
    ]
   },
   {
@@ -1666,7 +1666,8 @@
     "# we remove all samples for which no clinical data exists\n",
     "samples_keep = [np.all(np.logical_not(np.isnan(meta_data_mat[i, :]))) for i in range(meta_data_mat.shape[0])]\n",
     "meta_data_mat = meta_data_mat[samples_keep, :]\n",
-    "X = X[samples_keep, :]"
+    "X = X[samples_keep, :]\n",
+    "meta_data_subs = meta_data_full.iloc[samples_keep, :]"
    ]
   },
   {
@@ -1738,7 +1739,7 @@
     {
      "data": {
       "text/plain": [
-       "<MicroBiome.DiffExpTransform at 0x7f0db06cde50>"
+       "<MicroBiome.DiffExpTransform at 0x7f4583b03350>"
       ]
      },
      "execution_count": 38,
@@ -2599,7 +2600,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f0db06230d0>]"
+       "[<matplotlib.lines.Line2D at 0x7f4583a5a190>]"
       ]
      },
      "execution_count": 44,
@@ -2892,6 +2893,8 @@
     "    if os.path.exists(output_dir):\n",
     "        os.system('rm -rf ' + output_dir)\n",
     "    os.mkdir(output_dir)\n",
+    "    # save metadata\n",
+    "    meta_data_subs.to_csv(os.path.join(output_dir, 'metadata_samples_keep.csv'))\n",
     "    # input pipeline. Just concatenates inputs\n",
     "    ListTransform = list_transformer([None, None])\n",
     "    # classification pipeline\n",
