--- a/src/LR_Classifier_clinical_only_complete_generic.ipynb
+++ b/src/LR_Classifier_clinical_only_complete_generic.ipynb
@@ -1221,7 +1221,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f087cabc150>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fb672a79e50>"
       ]
      },
      "execution_count": 14,
@@ -1257,7 +1257,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f087d36a850>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fb66eb7fb50>"
       ]
      },
      "execution_count": 15,
@@ -1382,10 +1382,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if any_zero_samples:\n",
-    "    samples_keep = np.logical_not(zero_samples)\n",
-    "    X = X[samples_keep, :]\n",
-    "    meta_data_full = meta_data_full.iloc[samples_keep, :]"
+    "# if any_zero_samples:\n",
+    "#     samples_keep = np.logical_not(zero_samples)\n",
+    "#     X = X[samples_keep, :]\n",
+    "#     meta_data_full = meta_data_full.iloc[samples_keep, :]"
    ]
   },
   {
@@ -1666,7 +1666,8 @@
     "# we remove all samples for which no clinical data exists\n",
     "samples_keep = [np.all(np.logical_not(np.isnan(meta_data_mat[i, :]))) for i in range(meta_data_mat.shape[0])]\n",
     "meta_data_mat = meta_data_mat[samples_keep, :]\n",
-    "X = X[samples_keep, :]"
+    "X = X[samples_keep, :]\n",
+    "meta_data_subs = meta_data_full.iloc[samples_keep, :]"
    ]
   },
   {
@@ -1802,6 +1803,8 @@
     "    if os.path.exists(output_dir):\n",
     "        os.system('rm -rf ' + output_dir)\n",
     "    os.mkdir(output_dir)\n",
+    "    # save metadata\n",
+    "    meta_data_subs.to_csv(os.path.join(output_dir, 'metadata_samples_keep.csv'))\n",
     "    # classification pipeline\n",
     "    clf = LM.LogisticRegression(random_state=42, class_weight='balanced', \n",
     "                                penalty='l2', solver='liblinear')\n",
